--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,21 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
+  build_runner: ^2.4.8
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
-  build_runner: ^2.4.8
-  
 
 dev_dependencies:
-  
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  
+
   json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
