--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  modal_progress_hud_nsn: ^0.4.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
